--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -1,4 +1,4 @@
-=sale_steps
+=sale_steps unless request.xhr?
 
 -price_id, location_id = nil, nil
 =formalize do |f|
@@ -9,6 +9,7 @@
   -location_id = f.field :sale_order_line, :location_id, :choices=>{:reflection=>:locations}, :new=>{:action=>:location_create} if @locations.size > 1
   -f.field :sale_order_line, :quantity
   -f.field :sale_order_line, :annotation, :field=>:textarea
+
 #stocks=#render :partial=>"sale_order_line_stocks"
 #tracking=render :partial=>"sale_order_line_tracking"
 #subscription=render :partial=>"subscription_coordinates_form"
@@ -26,6 +27,6 @@
 
 -#=observe_field(price_id, :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
 =observe_field(price_id, :url=>{:action=>:subscription_coordinates, :entity_id=>@sale_order.client_id}, :frequency=>0.25, :with=>"price_id", :update=>:subscription, :loading=>"onLoading()", :loaded=>"onLoaded()")
-=observe_field(price_id, :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_price_id")
+=observe_field(price_id, :update=>:tracking, :url=>{:action=>:sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_price_id")
 -if @current_company.locations.size > 1
   =observe_field(location_id, :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_location_id")
