Fix a lot of problem in sale process and begins to check to_accountancy process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1537 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,8 @@
           .nav
             =help_link_tag
             =side_link_tag
-            %h1.title=action_title
+            -title = action_title
+            %h1.title{:title=>title}=title
           .yield{:flex=>1, :orient=>:vertical}
             =notifications_tag
             =yield
