Finish to clean accountize process and add better translation of sale_payment and purchase_payment in French
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1538 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account.html.haml
+++ b/app/views/accountancy/account.html.haml
@@ -25,4 +25,5 @@
 
 =tabbox(:account) do |tb|
   -tb.tab(:journal_entries, :content=>dyta(:account_journal_entries))
+  -tb.tab(:entities, :content=>dyta(:account_entities))
   -#tb.tab(:children, :content=>dyta(:account_children))
