--- a/app/views/accountancy/accountize.html.haml
+++ b/app/views/accountancy/accountize.html.haml
@@ -9,10 +9,12 @@
 -if @step == 2
   -form_tag({}, :method=>:post) do
     =formalize do |f|
+      -f.title tc(:parameters)
       -f.field tc(:select_date_generation), ::I18n.localize(params[:finish_accountization_on])
-      -for nature in @natures
-        -f.field tc("#{nature.to_s.pluralize}_count"), @records[nature].size
       -f.field tc(:save_in_draft), check_box_tag("save_in_draft", "1", @current_company.draft_mode?)
+      -f.title tc(:counts_by_nature)
+      -for nature in @natures
+        -f.field nature.to_s.classify.constantize.human_name, @records[nature].size
     .actions
       =submit_tag(tg(:save))
       =link_to tg(:back), :action=>:accountize, :finish_accountization_on=>params[:finish_accountization_on]
