Add better support for purchase payments
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1542 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_purchase_payment_form.html.haml
+++ b/app/views/management/_purchase_payment_form.html.haml
@@ -4,6 +4,7 @@
   -f.field :purchase_payment, :payee_id, :choices=>:entities, :new=>{:controller=>:relations, :action=>:entity_create}
   -f.field :purchase_payment, :amount
   -f.field :purchase_payment, :to_bank_on
+  -f.field :purchase_payment, :delivered
   -f.field :purchase_payment, :mode_id, :choices=>{:reflection=>:purchase_payment_modes}, :new=>{:action=>:purchase_payment_mode_create}
   -f.title :embankable
   -f.field :purchase_payment, :responsible_id, :choices=>{:reflection=>:users}
