--- a/app/views/management/sale_payments.html.haml
+++ b/app/views/management/sale_payments.html.haml
@@ -1,2 +1,17 @@
-=render :partial=>'sale_payments_search'
+.search
+  -form_tag({}, :method=>:get) do
+    %table
+      %tr
+        %td.crit
+          =tc(:search)
+          =text_field_tag :key, session[:sale_payment_key]
+        %td.submit{:rowspan=>2}=submit_tag tg(:search_go), :name=>nil
+      %tr
+        %td.crit
+          -for state in [:all, :unparted, :unreceived, :waiting, :unembanked]
+            =radio_button_tag("state", state, (state.to_s == session[:sale_payment_state]))
+            %label{:for=>"state_#{state}"}=tc(state)
+
+=toolbar do |t|
+  -t.link :sale_payment_create
 =dyta :sale_payments
