--- a/app/views/accountancy/_journals.html.haml
+++ b/app/views/accountancy/_journals.html.haml
@@ -6,9 +6,9 @@
       -if action_name=="draft_entries"
         %strong.tab.current.special=name
       -else
-        =link_to(name, {:action=>:draft_entries, :controller=>:accountancy, :start=>params[:start], :finish=>params[:finish]}, :class=>"tab special")
+        =link_to(name, {:action=>:draft_entries, :controller=>:accountancy, :mode=>params[:mode], :period=>params[:period], :start=>params[:start], :finish=>params[:finish]}, :class=>"tab special")
     -for journal in journals
       -name= journal.name.gsub(/\s+/, '&nbsp;')
       -klass = "tab"
       -klass += " current" if (action_name=="journal" and journal.id==@journal.id) or (@journal_record and @journal_record.journal_id==journal.id)
-      =link_to(name, {:action=>:journal, :controller=>:accountancy, :id=>journal.id, :start=>params[:start], :finish=>params[:finish]}, :title=>journal.name, :class=>klass)
+      =link_to(name, {:action=>:journal, :controller=>:accountancy, :id=>journal.id, :mode=>params[:mode], :period=>params[:period], :start=>params[:start], :finish=>params[:finish]}, :title=>journal.name, :class=>klass)
