--- a/app/views/accountancy/draft_entries.html.haml
+++ b/app/views/accountancy/draft_entries.html.haml
@@ -3,5 +3,6 @@
     =journals_tag
     .search=render :partial=>"journals_search"
     =dyta(:draft_entries)
+    .end
   .actions
     =submit_tag(tc(:validate_selected_entries), :confirm=>tg(:are_you_sure), :name=>:validate)
