--- a/app/views/accountancy/index.html.haml
+++ b/app/views/accountancy/index.html.haml
@@ -1,6 +1,7 @@
 .menu.indicator
   %h2= tg('indicator')
   %ul
-    =li_link_to tc(:nb_entries, :count=>@entries.size), :action=>:journals
+    =li_link_to tc(:nb_entries, :count=>@current_company.journal_entries.count), :action=>:journals
+
 %h2=tc :journals
 =journals_tag
