--- a/public/themes/tekyla/stylesheets/dyta.css
+++ b/public/themes/tekyla/stylesheets/dyta.css
@@ -80,6 +80,8 @@ table.dyta tr.details td.comment { padding: 10px; font-size:15px; }
 table.dyta tr.total th {text-align: right;}
 table.dyta tr.total td {font-size: 18px; font-weight:bold; background:#FFD !important; padding: 2px 4px; text-align: right; border:1px solid #BACFE6; max-width: 12em;}  
 table.dyta tr.total td.important {font-size: 20px; } 
+table.dyta tr.subtotal td { font-weight:bold; background:#FFE !important; text-align: right; border:1px solid #BACFE6; max-width: 12em;}  
+table.dyta tr.subtotal th {  background:#FFE !important; border:1px solid #BACFE6;}  
 
 table.dyta tr.empty td { text-align:center; background: #EEF; color: #779; padding: 20px; font-style: italic;}
 table.dyta tr.empty:hover td { background: #EEF; }
