--- a/app/views/management/_embankment_form.html.haml
+++ b/app/views/management/_embankment_form.html.haml
@@ -4,6 +4,7 @@
   - f.field :embankment, :cash_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:controller=>:accountancy, :action=>:cash_create, :nature=>:bank_account}
   - f.field :embankment, :embanker_id, :choices=>{:reflection=>:users}
   - f.field :embankment, :created_on
+  - f.field :embankment, :comment
 
 =hidden_field_tag :mode_id, @embankment.mode_id
 
