--- a/app/views/shared/_entities_search.html.haml
+++ b/app/views/shared/_entities_search.html.haml
@@ -1,7 +1,7 @@
 .search
-  - form_tag(:controller=>:relations, :action=>:entities) do
+  - form_tag({:controller=>:relations, :action=>:entities}, :method=>:get) do
     %table
       %tr
         %td.label=tc("search")
-        %td.field=text_field_tag :key, session[:entity_key]
-        %td.submit=submit_tag tg("search_go")
+        %td.field=text_field_tag :key, params[:key]||session[:entity_key]
+        %td.submit=submit_tag tg("search_go"), :name=>nil
