Update default document templates
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1549 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entity_form.html.haml
+++ b/app/views/relations/_entity_form.html.haml
@@ -15,6 +15,7 @@
   -f.title :details
   -f.field :entity, :country,:choices=>countries
   -f.field :entity, :siren
+  -f.field :entity, :activity_code
   -f.field :entity, :vat_number
   -f.field :entity, :excise
   -f.field :entity, :code
