--- a/app/views/accountancy/journal_record.html.haml
+++ b/app/views/accountancy/journal_record.html.haml
@@ -1,6 +1,9 @@
 =render :partial=>"journals"
 =toolbar do |t|
   -t.link(:journal_record_update, :id=>@journal_record.id) if @journal_record.draft?
+  -if @journal_record.resource
+    -t.link(tc(:resource, :resource=>@journal_record.resource.class.human_name, :number=>(@journal_record.resource.respond_to?(:number) ? @journal_record.resource.number : '')), {:controller=>:management, :action=>@journal_record.resource_type.underscore, :id=>@journal_record.resource_id})
+
 %table
   %tr
     %td
