--- a/app/views/management/sale_payment.html.haml
+++ b/app/views/management/sale_payment.html.haml
@@ -20,6 +20,7 @@
       =evalue @sale_payment, :bank
       =evalue @sale_payment, :account_number
       =evalue @sale_payment, :check_number
+      =evalue @sale_payment, :journal_record, :url=>{:controller=>:accountancy, :action=>:journal_record}
 
 -if @sale_payment.parts.size>0
   -if SaleOrder.find(:all, :conditions=>["sale_orders.company_id=? AND id IN (SELECT expense_id FROM sale_payment_parts WHERE payment_id=? AND expense_type=?)", @current_company.id, session[:current_payment_id], SaleOrder.name]).size > 0
