--- a/app/views/management/purchase_payment.html.haml
+++ b/app/views/management/purchase_payment.html.haml
@@ -14,6 +14,7 @@
       =evalue @purchase_payment, :paid_on
       =evalue @purchase_payment, :to_bank_on
       =evalue @purchase_payment, :check_number
+      =evalue @purchase_payment, :journal_record, :url=>{:controller=>:accountancy, :action=>:journal_record}
 
 -if false # @purchase_payment.unused_amount > 0
   -form_tag() do
