Set t3e calls wherever is needed
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1551 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account.html.haml
+++ b/app/views/accountancy/account.html.haml
@@ -1,5 +1,7 @@
 =toolbar do |t|
   -t.link :account_update, :id=>@account.id
+  -if @account.letterable?
+    -t.link :account_letter, :id=>@account.id
 %table.flex
   %tr
     %td
@@ -14,12 +16,12 @@
           %th=JournalRecord.human_attribute_name("credit")
         %tr.total
           %th=tc(:totals)
-          %td.value=@totals[:debit]
-          %td.value=@totals[:credit]
+          %td.value=number_to_accountancy(@totals[:debit])
+          %td.value=number_to_accountancy(@totals[:credit])
         %tr.total
           %th=tc(:balance)
-          %td.value=@totals[:balance_debit]
-          %td.value=@totals[:balance_credit]
+          %td.value=number_to_accountancy(@totals[:balance_debit])
+          %td.value=number_to_accountancy(@totals[:balance_credit])
 
 
 
