--- a/app/views/management/embankment.html.haml
+++ b/app/views/management/embankment.html.haml
@@ -4,6 +4,7 @@
 
 =evalue @embankment, :cash, :url=>{:controller=>:accountancy, :action=>:cash}
 =evalue @embankment, :comment
+=evalue @embankment, :journal_record, :url=>{:controller=>:accountancy, :action=>:journal_record}
 
 %h2=Embankment.human_attribute_name("payments")
 =dyta :embankment_payments
