--- a/app/views/accountancy/bank_statement_point.html.haml
+++ b/app/views/accountancy/bank_statement_point.html.haml
@@ -8,7 +8,7 @@
     %tr
       %th
       %th=JournalRecord.human_attribute_name("number")
-      %th=JournalRecord.human_attribute_name("created_on")
+      %th=JournalRecord.human_attribute_name("printed_on")
       %th=JournalEntry.human_attribute_name("name")
       %th=JournalEntry.human_attribute_name("debit")
       %th=JournalEntry.human_attribute_name("credit")
@@ -18,22 +18,54 @@
       %tr{:id=>trid, :class=>(checked ? "notice " : "")+cycle("even", "odd")}
         %td.chk
           -if @journal_entry.bank_statement_id.nil? or checked
-            =check_box_tag("journal_entry[#{@journal_entry.id}][checked]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t1();" ) 
+            =check_box_tag("journal_entry[#{@journal_entry.id}][checked]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t1();", :id=>"journal_entry_#{@journal_entry.id}_checked" ) 
           -else
             =link_to(@journal_entry.bank_statement.number, :action=>:bank_statement, :id=>@journal_entry.bank_statement.id)
         %td=link_to(@journal_entry.record.number, :action=>:journal_record, :id=>@journal_entry.record_id)
-        %td=I18n.localize(@journal_entry.record.created_on)
-        %td=@journal_entry.name
-        %td.decimal.debit=@journal_entry.debit
-        %td.decimal.credit=@journal_entry.credit
+        %td.date=I18n.localize(@journal_entry.record.printed_on)
+        %td.clickable{:onclick=>"toggleCheckBox('journal_entry_#{@journal_entry.id}_checked')"}=@journal_entry.name
+        %td.decimal.debit.clickable{:onclick=>"toggleCheckBox('journal_entry_#{@journal_entry.id}_checked')"}=number_to_accountancy(@journal_entry.debit)
+        %td.decimal.credit.clickable{:onclick=>"toggleCheckBox('journal_entry_#{@journal_entry.id}_checked')"}=number_to_accountancy(@journal_entry.credit)
     %tr.total
       %th{:colspan=>4}=tg(:total)
       %td#total-debit=@bank_statement.debit || 0
       %td#total-credit=@bank_statement.credit || 0
+    -if previous = @bank_statement.previous
+      %tr.total
+        %th{:colspan=>4}=tc(:previous_bank_statement, :number=>previous.number, :started_on=>previous.started_on, :stopped_on=>previous.stopped_on)
+        %td#previous-debit=previous.balance_debit || 0
+        %td#previous-credit=previous.balance_credit || 0
+      %tr.total
+        %th{:colspan=>4}=tc(:cumul, :number=>previous.number, :started_on=>previous.started_on, :stopped_on=>previous.stopped_on)
+        %td#cumul-debit=previous.balance_debit || 0
+        %td#cumul-credit=previous.balance_credit || 0
+      %tr.total
+        %th{:colspan=>4}=tc(:balance)
+        %td#balance-debit=previous.balance_debit || 0
+        %td#balance-credit=previous.balance_credit || 0
   .actions=submit_tag(tg(:save))
 :javascript
   window.t1 = function() {
     var sd = sum_all('tr.notice .debit',  'total-debit');
     var sc = sum_all('tr.notice .credit', 'total-credit');
+    var bd = $('cumul-debit');
+    var bc = $('cumul-credit');
+    var d = 0;
+    var c = 0;
+    if (bd && bc) {
+      $('previous-debit').innerHTML  = toCurrency($('previous-debit').innerHTML);
+      $('previous-credit').innerHTML = toCurrency($('previous-credit').innerHTML);
+      d = sd.innerHTML*1+$('previous-debit').innerHTML*1
+      c = sc.innerHTML*1+$('previous-credit').innerHTML*1
+      bd.innerHTML = toCurrency(d);
+      bc.innerHTML = toCurrency(c);
+      if (d > c) {
+        $('balance-debit').innerHTML  = toCurrency(d-c);
+        $('balance-credit').innerHTML = toCurrency(0.0);
+      } else {
+        $('balance-debit').innerHTML  = toCurrency(0.0);
+        $('balance-credit').innerHTML = toCurrency(c-d);
+      }
+    }
   }
   t1();
